Fix layout problems in non-opera browsers.

--- a/static/style.css
+++ b/static/style.css
@@ -40,6 +40,7 @@ body {
 	background-color: #888;
 	font-size: 10pt;
 	padding: 0mm;
+	text-align: right;
 }
 
 #nav a {
@@ -51,8 +52,6 @@ body {
 
 #nav ul {
 	display: inline;
-	position: absolute;
-	right: 0mm;
 	list-style: none;
 }
 
@@ -67,6 +66,9 @@ body {
 a.apptitle {
 	background-color: #23a;
 	letter-spacing: 0.2ex;
+	position: absolute;
+	top: 0px;
+	left: 0px;
 }
 
 h1 {
